# YKT-Browser

./: .gitignore  README.md  YKTBrowser.spec  app.py  build.ps1  build.py  engine.py  main.py  pyproject.toml  run.bat  setup.bat  yuketang_auto.py  yuketang_gui.py
browser-profile/: Breadcrumbs  Local State
browser-profile/Default/: DIPS  Favicons  History  Preferences  Secure Preferences  Web Data  passkey_enclave_state
browser-profile/GrShaderCache/: data_0  data_1  f_000001  f_000004  f_000005  f_000007  f_00000c  index
browser-profile/GraphiteDawnCache/: index
browser-profile/ShaderCache/: data_1  index
browser-profile/segmentation_platform/: ukm_db
logs/20260407-161651/: config.json  events.jsonl
logs/20260407-161725/: events.jsonl
logs/20260407-162002/: config.json  events.jsonl
logs/20260407-162129/: events.jsonl
logs/20260407-162308/: config.json  events.jsonl
logs/20260407-162839/: config.json  events.jsonl
logs/20260407-162914/: config.json  events.jsonl
logs/20260407-163031/: events.jsonl
logs/20260407-163132/: config.json  events.jsonl
logs/20260407-163246/: events.jsonl
logs/20260407-163354/: config.json  events.jsonl
logs/20260407-165928/: config.json  events.jsonl
logs/20260407-171000/: config.json  events.jsonl
synthetic-profile/: Local State
synthetic-profile-gui/: Local State
synthetic_course/: done.html  exercise.html  video.html
tests/: test_engine.py
tmp-profile-smoke/: Breadcrumbs  Local State
ykt_browser/: __init__.py  cli.py  core.py  gui.py  models.py  session_logging.py  styles.py
(+681 files in other folders)
