[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuketang-browser"
version = "0.3.0"
description = "Rain Classroom browser automation with Qt desktop UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright==1.58.0",
  "PySide6==6.11.0",
]

[project.scripts]
yuketang-auto = "ykt_browser.cli:main"

[project.gui-scripts]
yuketang-auto-ui = "ykt_browser.gui:main"

[tool.setuptools]
packages = ["ykt_browser"]
